--- a/Puja_Parikrama.html
+++ b/Puja_Parikrama.html
@@ -24,6 +24,7 @@
             display: flex;
             gap: 10px;
             margin-bottom: 20px;
+            flex-wrap: wrap;
         }
         .tab {
             padding: 10px 20px;
