--- a/Puja_Parikrama.html
+++ b/Puja_Parikrama.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSV Data with Embedded Videos</title>
+    <title>Puja Parikrama</title>
     <style>
         body {
             font-family: Arial, sans-serif;
